# SPAC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  artifact-manifest.schema.json
.github/workflows/: ci.yml
configs/schemas/: architecture.schema.json  board-profile.schema.json  constraints.schema.json  dse-result.schema.json  dse-space.schema.json  experiment-run.schema.json  hls-csim-run.schema.json  hls-traits-run.schema.json  hw-acceptance.schema.json  hw-report.schema.json  project.schema.json  simulation-run.schema.json  trace.schema.json
crates/spac-cli/: Cargo.toml
crates/spac-cli/src/: main.rs
crates/spac-cli/tests/: golden_metadata.rs  golden_simulation.rs  public_contracts.rs  validate_cli.rs
crates/spac-codegen/: Cargo.toml
crates/spac-core/: Cargo.toml
crates/spac-dse/: Cargo.toml
crates/spac-dse/src/: lib.rs
crates/spac-dsl/: Cargo.toml
crates/spac-hwreport/: Cargo.toml
crates/spac-layout/: Cargo.toml
crates/spac-sim/: Cargo.toml
crates/spac-trace/: Cargo.toml
docs-public/: engineering-overview.md  fpga-first-light.md  fpga-validation.md  maturity-todo.md  spac-ae-comparison.md
examples/contracts/: architecture.datacenter_hash_shared_islip.json  architecture.hft_full_lookup_one_buffer_islip.json  architecture.hft_full_lookup_rr.json  architecture.underwater_hash_nbyn_edrrm.json  board-profile.alveo-u45n.json  constraints.dse_tiny_lenient.json  constraints.paper_aligned_u45n.json  dse-space.tiny.json  experiment-run.e0_hft_layout.json  hw-report.vitis_hls_summary.rpt  (+10 more)
(+23 files in other folders)
