[package]
name = "spac-dse"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
spac-core = { path = "../spac-core" }
spac-sim = { path = "../spac-sim" }
spac-trace = { path = "../spac-trace" }
